--- a/sass/style.scss
+++ b/sass/style.scss
@@ -138,6 +138,10 @@ button {
     &__list {
         padding: 0;
         margin: 12px;
+        @include desktop {
+            display: flex;
+            justify-content: space-around;
+        }
     }
 }
 
@@ -152,6 +156,9 @@ button {
     align-items: center;
     font-weight: bold;
     position: relative;
+    @include desktop {
+        width: 30%;
+    }
     &:hover {
         background: lighten($color-primary, 35);
         }
@@ -190,6 +197,9 @@ button {
         width: 100%;
         height: 150px;
         object-fit: cover;
+        @include desktop {
+            height: 200px;
+        }
         
     }
     .new {
@@ -206,16 +216,22 @@ button {
         position: relative;
         h4 {
             margin: 0;
-            padding: 6px 0 5px 10px;
+            padding: 6px 0 8px 10px;
             }
         p {
             @extend h4
         }
     }
     &__restaurant {
+        @include tablet {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
         @include desktop {
             display: flex;
-            
+            flex-wrap: wrap;
+            justify-content: space-around;
         }
     }
     &__restaurant-card {
@@ -224,8 +240,11 @@ button {
         border-radius: 15px;
         overflow: hidden;
         position: relative;
+        @include tablet {
+            width: 40%;
+        }
         @include desktop {
-            width: 100%;
+            width: 40%;
         }
     }
 }     
@@ -238,7 +257,7 @@ button {
     font-size: 30px;
     color: #FFF;
     // text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    text-shadow: -2px 0 black, 0 3px black, 2px 0 black, 0 -2px black;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
     &:hover {
             color: $color-primary;
             background: linear-gradient($color-secondary, $color-primary);
@@ -299,6 +318,9 @@ footer {
     height: 250px;
     width: 100%;
     object-fit: cover;
+    @include desktop {
+        height: 600px;
+    }
     }
 }
 
@@ -308,6 +330,11 @@ footer {
     border-radius: 30px 30px 0 0;
     position: relative;
     margin-top: -50px;
+    @include desktop {
+        width: 80%;
+        margin: auto;
+        margin-top: -60px;
+    }
 
     .title {
         padding: 10px 0 20px 20px;
@@ -320,11 +347,11 @@ footer {
         i {
             position: absolute;
             font-size: 1.5rem;
-            right: 20px;
+            right: 30px;
             top: 42px;
             color: $color-background;
             // text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-            text-shadow: -2px 0 black, 0 3px black, 2px 0 black, 0 -2px black;
+            text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
             &:hover {
                 color: $color-primary;
                 background: linear-gradient($color-secondary, $color-primary);
@@ -399,22 +426,27 @@ footer {
 
 .anim1{
     animation-duration: 1.5s;
-    animation-delay: 0.3s;
+    animation-delay: 0.2s;
     animation-name: glissement;
 }
 
 .anim2{
     animation-duration: 1.5s;
-    animation-delay: 0.6s;
+    animation-delay: 0.4s;
     animation-name: glissement;
 }
 
 .anim3{
     animation-duration: 1.5s;
-    animation-delay: 0.9s;
+    animation-delay: 0.6s;
     animation-name: glissement;
 }
 
+.anim4{
+    animation-duration: 1.5s;
+    animation-delay: 0.8s;
+    animation-name: glissement;
+}
 
 
 @keyframes glissement {
@@ -426,6 +458,8 @@ footer {
         width: 100%;
     }
   }
+
+
 
 
 
