--- a/style.css
+++ b/style.css
@@ -120,6 +120,12 @@ button:hover {
   padding: 0;
   margin: 12px;
 }
+@media (min-width: 1200px) {
+  .functioning__list {
+    display: flex;
+    justify-content: space-around;
+  }
+}
 
 .functioning li {
   background: #f6f6f6;
@@ -131,6 +137,11 @@ button:hover {
   align-items: center;
   font-weight: bold;
   position: relative;
+}
+@media (min-width: 1200px) {
+  .functioning li {
+    width: 30%;
+  }
 }
 .functioning li:hover {
   background: #f2eafb;
@@ -167,6 +178,11 @@ button:hover {
   height: 150px;
   object-fit: cover;
 }
+@media (min-width: 1200px) {
+  .container img {
+    height: 200px;
+  }
+}
 .container .new {
   background: #99E2D0;
   width: 80px;
@@ -182,11 +198,20 @@ button:hover {
 }
 .container figcaption h4, .container figcaption p {
   margin: 0;
-  padding: 6px 0 5px 10px;
+  padding: 6px 0 8px 10px;
+}
+@media (min-width: 600px) and (max-width: 1199px) {
+  .container__restaurant {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 @media (min-width: 1200px) {
   .container__restaurant {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 .container__restaurant-card {
@@ -196,9 +221,14 @@ button:hover {
   overflow: hidden;
   position: relative;
 }
+@media (min-width: 600px) and (max-width: 1199px) {
+  .container__restaurant-card {
+    width: 40%;
+  }
+}
 @media (min-width: 1200px) {
   .container__restaurant-card {
-    width: 100%;
+    width: 40%;
   }
 }
 
@@ -208,7 +238,7 @@ button:hover {
   top: 15px;
   font-size: 30px;
   color: #FFF;
-  text-shadow: -2px 0 black, 0 3px black, 2px 0 black, 0 -2px black;
+  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
 }
 .heart:hover {
   color: #9356DC;
@@ -260,12 +290,24 @@ footer li {
   width: 100%;
   object-fit: cover;
 }
+@media (min-width: 1200px) {
+  .bg img {
+    height: 600px;
+  }
+}
 
 .container-menu {
   background: #f6f6f6;
   border-radius: 30px 30px 0 0;
   position: relative;
   margin-top: -50px;
+}
+@media (min-width: 1200px) {
+  .container-menu {
+    width: 80%;
+    margin: auto;
+    margin-top: -60px;
+  }
 }
 .container-menu .title {
   padding: 10px 0 20px 20px;
@@ -278,10 +320,10 @@ footer li {
 .container-menu .title i {
   position: absolute;
   font-size: 1.5rem;
-  right: 20px;
+  right: 30px;
   top: 42px;
   color: #f6f6f6;
-  text-shadow: -2px 0 black, 0 3px black, 2px 0 black, 0 -2px black;
+  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2.5px black;
 }
 .container-menu .title i:hover {
   color: #9356DC;
@@ -351,19 +393,25 @@ footer li {
 
 .anim1 {
   animation-duration: 1.5s;
-  animation-delay: 0.3s;
+  animation-delay: 0.2s;
   animation-name: glissement;
 }
 
 .anim2 {
   animation-duration: 1.5s;
-  animation-delay: 0.6s;
+  animation-delay: 0.4s;
   animation-name: glissement;
 }
 
 .anim3 {
   animation-duration: 1.5s;
-  animation-delay: 0.9s;
+  animation-delay: 0.6s;
+  animation-name: glissement;
+}
+
+.anim4 {
+  animation-duration: 1.5s;
+  animation-delay: 0.8s;
   animation-name: glissement;
 }
 
